--- a/changelog
+++ b/changelog
@@ -1,5 +1,6 @@
 ﻿--- 2008-11-09 Jay Wang stu90206@gmail.com
  * 添加 Inno Setup Unpacker 0.20 (已經附上)
+ * 添加 Mercurial 1.0.2
 
 --- 2008-11-08 Jay Wang stu90206@gmail.com
  * 更新 NSPR 至 4.7.3 (已經附上)
