--- a/README
+++ b/README
@@ -23,6 +23,8 @@ mozbuildtools 是一項計畫，實現使用 MinGW 在 Windows 編譯 Mozilla。
   - 新增 tofrodos 1.7.8
   - 新增 pkg-config 0.2.3
   - 刪除部份 patch 檔(改由網路下載)
+  - 新增 Inno Setup Unpacker 0.20
+  - 新增 Mercurial 1.0.2
 
 ＊ 特點:
   - 不必安裝龐大的 Visual C++
