--- a/changelog
+++ b/changelog
@@ -5,6 +5,7 @@
  * 添加 UPX 3.0.3
  * 添加 NSIS 2.22
  * 將 7za.exe 複製一份更名為 7z.exe
+ * 增加 make_installer.sh 的 shell script
 
 --- 2008-11-08 Jay Wang stu90206@gmail.com
  * 更新 NSPR 至 4.7.3 (已經附上)
