--- a/changelog
+++ b/changelog
@@ -1,4 +1,7 @@
-﻿--- 2008-11-09 Jay Wang stu90206@gmail.com
+﻿--- 2008-11-10 Jay Wang stu90206@gmail.com
+ * 修改 README 版本號至 2.0
+
+--- 2008-11-09 Jay Wang stu90206@gmail.com
  * 添加 Inno Setup Unpacker 0.20 (已經附上)
  * 添加 Mercurial 1.0.2
  * Version 0.1.1 釋出
