--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
-﻿--- 2008-11-13 Jay Wang stu90206@gmail.com
+﻿--- 2008-11-14 Jay Wang stu90206@gmail.com
+ * 更新 binutils 至 2.19 RC1
+ * 修改 README 的檔名，改為 README.txt
+ * 修改 changelog 的檔名，改為 changelog
+
+--- 2008-11-13 Jay Wang stu90206@gmail.com
  * 將 tools 內執行檔用 UPX 壓縮
  * 將 NSPR 的 DLL 用 UPX 壓縮
  * 移除 make_installer.sh
