--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
  * 更新 binutils 至 2.19 RC1
  * 修改 README 的檔名，改為 README.txt
  * 修改 changelog 的檔名，改為 changelog
+ * 修改 README.txt 版本號至 0.3b1
 
 --- 2008-11-13 Jay Wang stu90206@gmail.com
  * 將 tools 內執行檔用 UPX 壓縮
