--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-﻿--- 2008-11-23 Jay Wang stu90206@gmail.com
+﻿--- 2008-12-05 Jay Wang stu90206@gmail.com
+ * 降級 GCC 至 4.2.1
+ * 降級 Python 至 2.5.2
+
+--- 2008-11-23 Jay Wang stu90206@gmail.com
  * 暫時升級 GCC 至 4.4-20081123 (測試用)
 
 --- 2008-11-15 Jay Wang stu90206@gmail.com
