--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 ﻿--- 2008-12-09 Jay Wang stu90206@gmail.com
  * 新增 Vista 支援
  * 修改版本號至 0.3b2
+ * 新增壓縮執行檔支援
 
 --- 2008-12-05 Jay Wang stu90206@gmail.com
  * 降級 GCC 至 4.2.1
