--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-﻿--- 2008-12-13 Jay Wang stu90206@gmail.com
+﻿--- 2009-01-01 Jay Wang stu90206@gmail.com
+ * 修正 setup.bat 之錯誤
+ * 更新 Python 至 2.5.4
+
+--- 2008-12-13 Jay Wang stu90206@gmail.com
  * 新增壓縮執行檔支援
  * 0.3b2 釋出
 
