* 更新 w32api 至 3.13  * 更新 binutils 至 2.19

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 ﻿--- 2009-01-01 Jay Wang stu90206@gmail.com
  * 修正 setup.bat 之錯誤
  * 更新 Python 至 2.5.4
+ * 更新 w32api 至 3.13
+ * 更新 binutils 至 2.19
 
 --- 2008-12-13 Jay Wang stu90206@gmail.com
  * 新增壓縮執行檔支援
