--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
-﻿--- 2009-01-16 Jay Wang stu90206@gmail.com
+﻿--- 2009-01-18 Jay Wang stu90206@gmail.com
+ * 更新 mingw-runtime 至 3.15.2
+ * 實驗更新 gcc 至 4.3.2-tdm-2
+ * 更新 hg 至 1.1.1
+
+--- 2009-01-16 Jay Wang stu90206@gmail.com
  * 修正 setup.bat 之錯誤
 
 --- 2009-01-01 Jay Wang stu90206@gmail.com
