--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 ﻿--- 2009-01-20 Jay Wang stu90206@gmail.com
  * 修改版本號至 1.0 beta 1
  * 新增 start-cmd.bat start-msys-rxvt.bat
+ * 更新 README.txt
 
 --- 2009-01-18 Jay Wang stu90206@gmail.com
  * 更新 mingw-runtime 至 3.15.2
