--- a/patches/Changelog.txt
+++ b/patches/Changelog.txt
@@ -1,4 +1,7 @@
-﻿--- 2008-12-13 Jay Wang stu90206@gmail.com
+﻿--- 2009-01-20 Jay Wang stu90206@gmail.com
+ * 同步 hg ，新增 3.2-a1c1a8bfd19e.patch
+
+--- 2008-12-13 Jay Wang stu90206@gmail.com
  * 稍微整理了 Patch 檔案的目錄結構
  * 修正了些 Patch
  * 新增 3.2.x 的 Patch
