--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
  * 修改版本號至 1.0 beta 1
  * 新增 start-cmd.bat start-msys-rxvt.bat
  * 更新 README.txt
+ * 1.0 beta 1 釋出
 
 --- 2009-01-18 Jay Wang stu90206@gmail.com
  * 更新 mingw-runtime 至 3.15.2
