--- 2009-08-13 Jay Wang stu90206@gmail.com  * 更新 setup.bat

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,11 +2,11 @@
   mozbuildtools 版本變更紀錄 (Changelog)
 ==========================================
 
---- 2009-08-10 Jay Wang stu90206@gmail.com
+--- 2009-08-13 Jay Wang stu90206@gmail.com
  * 更新 setup.bat
 
---- 2009-08-08 Jay Wang stu90206@gmail.com
- * 使用 MinGW64 之 shlobj.h 替換原來的 shlobj.h
+--- 2009-08-10 Jay Wang stu90206@gmail.com
+ * 更新 setup.bat
 
 --- 2009-08-03 Jay Wang stu90206@gmail.com
  * 修正 libuuid.a (新增原本沒有被支援的函式庫)(來自MinGW64)
