--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,12 @@
   mozbuildtools 版本變更紀錄 (Changelog)
 ==========================================
 
+--- 2009-08-21 Jay Wang stu90206@gmail.com
+ * 更新 GCC 至 4.4.1
+ * 更新 w32api 至 20090818
+ * 更新 MinGW Runtime 至 20090818
+ * 修改 C_INCLUDE_PATH 、 CPLUS_INCLUDE_PATH 和 LIBRARY_PATH 環境變數
+
 --- 2009-08-20 Jay Wang stu90206@gmail.com
  * 更動 setup.bat 之 NSIS
  * 將 autoconf automake libtool 解壓縮至 MinGW
