--- a/patches/Changelog.txt
+++ b/patches/Changelog.txt
@@ -1,4 +1,7 @@
-﻿--- 2009-08-09 Jay Wang stu90206@gmail.com
+﻿--- 2010-02-08 Jay Wang stu90206@gmail.com
+ * 新增 3.6-final.patch
+
+--- 2009-08-09 Jay Wang stu90206@gmail.com
  * 新增 3.6-1059e3342790.patch
 
 --- 2009-08-08 Jay Wang stu90206@gmail.com
