--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
   mozbuildtools 版本變更紀錄 (Changelog)
 ==========================================
 
+--- 2010-02-10 Jay Wang stu90206@gmail.com
+ * 將 glib、gettext、pkg-config 整合變成 libs
+ * 刪除 moztools
+
 --- 2010-02-08 Jay Wang stu90206@gmail.com
  * 更新版本號到 1.1.1
  * 更新MSYS與MinGW軟體
